# lab_02_homework

./: .gitignore  README.md  homework.html  homework.ipynb  pyproject.toml
